# flacParser

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  main.cpp
binary/: flacParser.exe.sha256
include/: AudioProcessor.hpp  CueParser.hpp  ILogger.hpp  MainWindow.hpp  Models.hpp  ThreadManager.hpp  Utils.hpp
src/: AudioProcessor.cpp  CueParser.cpp  MainWindow.cpp  ThreadManager.cpp  Utils.cpp
tests/: test_main.cpp
